#1450: Downgrade Java to 17